--- a/eslint.config.json
+++ b/eslint.config.json
@@ -15,8 +15,7 @@
     "no-unused-vars": 0,
     "no-underscore-dangle": 0,
     "no-alert": 0,
-    "no-lone-blocks": 0,
-    "no-debugger": 0
+    "no-lone-blocks": 0
   },
   "globals": {
     "jQuery": true,
